# mujoco_ros2_humble_integrate

./: .gitignore  MUJOCO_LOG.TXT
convex_hull_stl/: chassis.stl  foot_fixedv2.stl  footfixedv3.stl  leftfootfixed.stl  leftthighfixedv1.stl  rightshinfixedv2.stl  rightthighfixedv2.stl
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/learn/lib/learn/: publisher
install/learn/share/learn/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/learn/share/learn/cmake/: learnConfig.cmake
install/pkg1/lib/pkg1/: publisher  subscriber
install/pkg1/share/ament_index/resource_index/package_run_dependencies/: pkg1
install/pkg1/share/pkg1/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/eight_dof/: package.xml
src/eight_dof/include/: main.cc  simulate.cc
src/eight_dof/meshes/: chassis_no_batt.stl  chassisv6.stl  footv6.stl  shinv4.stl
src/eight_dof/mjcf/: 8dof.xml
src/eight_dof/src/: sim_launch.cpp  test_mat.py
src/pkg1/: CMakeLists.txt  package.xml  regulator
src/pkg1/include/simulate/: functions.h  physics.h  simulate.cc  simulate.h
src/pkg1/meshes/: thighv3.stl
src/pkg1/meshes/convex_hull/: body.stl  bodyv2.stl  foot.stl  footv2.stl  shin.stl  shinv2.stl  thigh.stl  thighv2.stl
src/pkg1/meshes/unused/: chassis.stl  chassis_convex.stl  chassisv2.stl  chassisv3.stl  chassisv4.stl  chassisv5.stl  foot.stl  footv2.stl  footv3.stl  footv4.stl  footv5.stl  shin.stl  shinv2.stl  shinv3.stl  thigh.stl  thighv2.stl
src/pkg1/msg/: IK6DOF.msg  ImuData.msg
src/pkg1/scad/: 6DOFSIMPLE.stl  BATT.stl  FOOT.stl  HIP.stl  JETSON.stl  LEFTLEG.stl  PELVIS.stl  SHIN.stl  SHINLINK.stl  THIGH.stl  robot.scad
src/pkg1/src/: 6dof_from_hip.xml  6dof_from_hip_unreduced.xml  7dof_arm.xml  MARKIV.xml  UIUX.c  ctrl_publisher_node.cpp  example.xml  foot_fixedv2.stl  hello.xml  leftfootfixed.stl  publisher_node.cpp  regulator.cpp  sim_subscriber_node.cpp  subscriber_node.cpp  try.py  trypublisher.cpp
src/pkg1/src/convex_hull_stl/: ReadMe.md  rightshinv3.stl
src/pkg1/src/original_stl/: chassisv2.stl  footfixedv3.stl
stl/: chassisv2 v1.stl  foot_fixedv2 v1.stl  footfixedv3 v1.stl  leftfootfixed v1.stl  leftthighfixedv1 v1.stl  new  rightshinfixedv2 v1.stl  rightshinv3 v1.stl  rightthighfixedv2 v1.stl
